tests/kulezi_tests/good/error_is_return01.lat
int main() {
    int x = 10;
    while (true) {
        x--;
        if (x < 0) error();
    }
}
