tests/kulezi_tests/bad/undeclared_arg_type.lat
int main() { return 0; }

int f(undeclared x) { return 0; }